[gd_scene load_steps=13 format=3 uid="uid://dri4ei1vkbmh6"]

[ext_resource type="Script" path="res://weapons/camera/CameraRoll.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bs8ygxnqe4gaq" path="res://ui/Icons/shadedLight24.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dhb3wr5irg0h8" path="res://ui/Icons/shadedLight25.png" id="3"]
[ext_resource type="Texture2D" uid="uid://4osf3pksxwje" path="res://ui/Icons/shadedLight33.png" id="4"]
[ext_resource type="Texture2D" uid="uid://c4i5vdhnxa2aq" path="res://ui/Icons/shadedLight46.png" id="5"]
[ext_resource type="FontFile" path="res://ui/Fonts/spacefontSmall.tres" id="6"]
[ext_resource type="Script" path="res://helper.gd" id="7_md6ey"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxEmpty" id="4"]

[sub_resource type="StyleBoxEmpty" id="1"]

[sub_resource type="StyleBoxEmpty" id="2"]

[sub_resource type="StyleBoxEmpty" id="5"]

[node name="CameraRoll" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.384314, 0.415686, 0.439216, 1)

[node name="GalContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Scroller" type="ScrollContainer" parent="GalContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Gallery" type="GridContainer" parent="GalContainer/Scroller"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 5

[node name="BackButton" type="Button" parent="GalContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("5")
flat = true

[node name="PhotoBrowser" type="TextureRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PhotoBrowser"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PhotoBrowser/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SinglePhoto" type="HBoxContainer" parent="PhotoBrowser/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Left" type="Button" parent="PhotoBrowser/VBoxContainer/SinglePhoto"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource("2")
flat = true

[node name="GalleryButton" type="Button" parent="PhotoBrowser/VBoxContainer/SinglePhoto"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("6")
theme_override_styles/focus = SubResource("3")
theme_override_styles/disabled = SubResource("4")
theme_override_styles/hover = SubResource("1")
theme_override_styles/pressed = SubResource("2")
theme_override_styles/normal = SubResource("5")
text = "Gallery"
icon = ExtResource("4")

[node name="right" type="Button" parent="PhotoBrowser/VBoxContainer/SinglePhoto"]
layout_mode = 2
icon = ExtResource("3")
flat = true

[node name="MetadataLabel" type="Label" parent="PhotoBrowser"]
layout_mode = 0
offset_left = 43.0
offset_top = 42.0
offset_right = 497.0
offset_bottom = 250.0

[node name="Helper" type="Node" parent="."]
script = ExtResource("7_md6ey")

[connection signal="item_rect_changed" from="GalContainer/Scroller" to="." method="_on_Scroller_item_rect_changed"]
[connection signal="pressed" from="GalContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="button_down" from="PhotoBrowser/VBoxContainer/SinglePhoto/Left" to="." method="_on_Left_button_down"]
[connection signal="pressed" from="PhotoBrowser/VBoxContainer/SinglePhoto/GalleryButton" to="." method="_on_GalleryButton_pressed"]
[connection signal="button_down" from="PhotoBrowser/VBoxContainer/SinglePhoto/right" to="." method="_on_right_button_down"]
